2005-09-20  Release Manager

	* GCC 4.0.2 released.

2005-07-07  Release Manager

	* GCC 4.0.1 released.

2005-04-20  Release Manager

	* GCC 4.0.0 released.

2005-03-09  Thomas Fitzsimmons <fitzsim@redhat.com>

	* acinclude.m4 (LTDL_SHLIB_VERSION_EXT): Add.
	* config-h.in, configure: Rebuilt.
	* ltdl.c (shlib_version_ext): New variable.
	(tryall_dlopen): Uncomment access check.
	(lt_dlopenext): Try first versioned extension (like .so.5) before
	version-less one.

2004-11-24  Kelley Cook  <kcook@gcc.gnu.org>

	* Makefile.in: Regenrate with Automake 1.9.3.
	* aclocal.m4: Likewise.
	* configure: Regenerate.

2004-06-15  Paolo Bonzini  <bonzini@gnu.org>

	* Makefile.in: Regenerate with Automake 1.8.5.
	* aclocal.m4: Likewise.
	* configure: Regenerate.

2004-05-03  Andreas Tobler  <a.tobler@schweiz.ch>

	* acinclude.m4: Replace -W with more speaking -Wextra.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2004-03-10  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.ac: Bump AC_PREREQ to 2.59.
	* configure: Regenerate.
	* config-h.in: Regenerate.

2004-02-22  Zack Weinberg <zack@codesourcery.com>
	    Nathanael Nerode <neroden@twcny.rr.com>
	    Alexandre Oliva <aoliva@redhat.com>

	* config.sub, config.guess: Replace with forwarding scripts
	which invoke the master copies in the top level.

2004-02-20  Andrew Cagney  <cagney@redhat.com>

	* config.guess: Update from version 2003-10-07 to 2004-02-16.
	* config.sub: Update from version 2003-10-07 to 2004-02-16.

2003-08-07  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* configure.in: Don't initialize GCINCS to boehm-gc/include.
	* Regenerate.

2002-04-28  Mark Mitchell  <mark@codesourcery.com>

	* .cvsignore: Remove files that are present in CVS.

2001-07-02  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.in: Added aux-dir hacks to satisfy automake and
	in-tree builds.

2001-05-21  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>

	* configure.in: Use correct include dir for new Boehm GC.